--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "@simulateur/web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@simulateur/core": "file:../../packages/core",
+    "@simulateur/data": "file:../../packages/data",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
