--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@simulateur/core": "file:../../packages/core",
+    "@simulateur/core": "workspace:*",
+    "@simulateur/data": "workspace:*",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
