--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -1,5 +1,7 @@
+# =====================
 # Logs
-logs
+# =====================
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +9,37 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# =====================
+# Dependencies
+# =====================
+node_modules/
+**/node_modules/
+
+# =====================
+# Build outputs
+# =====================
+dist/
+dist-ssr/
 *.local
 
-# Editor directories and files
+# =====================
+# Editor / IDE
+# =====================
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# =====================
+# OS files
+# =====================
+.DS_Store
+
+# =====================
+# Temp / erreurs passées
+# =====================
+tore .*
